Finished lib-app

--- a/app/views/libraries/show.html.erb
+++ b/app/views/libraries/show.html.erb
@@ -3,4 +3,6 @@
   This library has, <%= @library.floor_count %> floors! <br>
   This library has, <%= @library.floor_area %> floor area!
 
+  This library has, <%= @library.floor_area %> floor area!
+
 </div>
